--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bullet Time</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/Scenes/start.js"></script>
     <script src="./src/Scenes/round1.js"></script>
     <script src="./src/Scenes/round2.js"></script>
     <script src="./src/Scenes/round3.js"></script>
